--- a/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
@@ -3,9 +3,13 @@
 [id="selecting-an-open-vsx-registry-instance"]
 = Selecting an Open VSX registry instance
 
-The Open VSX registry at `pass:c,a,q[https://open-vsx.org]` is the default if resolved from within your organization's cluster. If not, then the embedded Open VSX registry within the {prod-short} `plugin-registry` pod is the default.
+include::example$snip_{project-context}-default-vsx-registry.adoc[]
 
-If the default Open VSX registry instance is not what you need, you can select another Open VSX registry instance as follows.
+If the default Open VSX registry instance is not what you need, you can select one of the following instances:
+
+include::example$snip_{project-context}-non-default-vsx-registry-instance.adoc[]
+
+* A standalone Open VSX registry instance that is deployed on a network accessible from {prod-short} workspace pods.
 
 .Procedure
 
@@ -16,14 +20,15 @@ If the default Open VSX registry instance is not what you need, you can select a
 spec:
   components:
     pluginRegistry:
-      openVSXURL: "__<url_of_an_open_vsx_registry_instance>__"
+      openVSXURL: "__<url_of_an_open_vsx_registry_instance>__" # <1>
 ----
+<1> For example: `openVSXURL: "pass:c,a,q[https://open-vsx.org]"`.
 +
 [TIP]
-====
-* The default `openVSXURL` value is `pass:c,a,q[https://open-vsx.org]`.
- 
+==== 
+
 * To select the embedded Open VSX registry instance in the `plugin-registry` pod, use `openVSXURL: ''`. You can xref:adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance[customize the list of included extensions].
 
 * You can also point `openVSXURL` at the URL of a standalone Open VSX registry instance if its URL is accessible from within your organization's cluster and not blocked by a proxy. 
+
 ====
