--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -25,7 +25,11 @@ include::partial$snip_preparing-images-for-a-restricted-environment.adoc[]
 +
 [subs="+attributes,+quotes"]
 ----
-$ {prod-cli} server:deploy --platform=openshift \
+$ {prod-cli} server:deploy \
+  --platform=openshift \
+  --catalog-source-name=restricted-environment-install \
+  --catalog-source-namespace=openshift-marketplace \
+  --skip-devworkspace-operator \
   --che-operator-cr-patch-yaml=che-operator-cr-patch.yaml
 ----
 
