--- a/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
+++ b/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
@@ -35,13 +35,11 @@
 [subs="+attributes,+quotes"]
 ----
 $ bash prepare-restricted-environment.sh \
-  --ocp_ver "{ocp4-ver}" \
   --devworkspace_operator_index "{devworkspace-operator-index}" \
   --devworkspace_operator_version "v{devworkspace-operator-version-patch}" \
   --prod_operator_index "{prod-operator-index}" \
   --prod_operator_package_name "{prod-operator-package-name}" \
   --prod_operator_version "v{prod-ver-patch}" \
-  --my_registry "__<my_registry>__" \
-  --my_catalog "__<my_catalog>__"
+  --my_registry "__<my_registry>__"
 ----
 
