--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -27,6 +27,7 @@ include::partial$snip_preparing-images-for-a-restricted-environment.adoc[]
 ----
 $ {prod-cli} server:deploy \
   --platform=openshift \
+  --olm-channel stable \
   --catalog-source-name={prod-operator-package-name}-disconnected-install \
   --catalog-source-namespace=openshift-marketplace \
   --skip-devworkspace-operator \
