docs: Adding a note about GitHub Enterprise Cloud PAT requirement
Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -41,6 +41,14 @@ On OpenShift, you can use the `oc` command-line tool to log in to the cluster:
 
 . Generate your access token on your Git provider's website.
 
++
++
+[IMPORTANT]
+====
+For GitHub Enterprise Cloud, verify that the token is link:https://docs.github.com/en/enterprise-cloud@latest/authentication/authenticating-with-saml-single-sign-on/authorizing-a-personal-access-token-for-use-with-saml-single-sign-on[authorized for use within the organization].
+====
++
+
 . Encode your access token to Base64.
 +
 [TIP]
@@ -120,3 +128,4 @@ EOF
 .Additional resources
 
 * xref:administration-guide:deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc[Deploying Che with support for Git repositories with self-signed certificates]
+* link:https://docs.github.com/en/enterprise-cloud@latest/authentication/authenticating-with-saml-single-sign-on/authorizing-a-personal-access-token-for-use-with-saml-single-sign-on[Authorizing a personal access token for use with SAML single sign-on]
