--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -46,4 +46,4 @@ $ echo -n '__<microsoft_azure_devops_services_oauth_app_id>__' | base64
 $ echo -n '__<microsoft_azure_devops_services_oauth_client_secret>__' | base64
 ----
 
-. After Configuring OAuth make sure to link:https://learn.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/oauth?view=azure-devops[Authorize access to the application with OAuth 2.0]
+* link:https://learn.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/oauth?view=azure-devops[Authorize access to the application with OAuth 2.0]
