Docs: Adding a step to verify Authorized Applications
Verify that the Application is Authorized, Click your avatar and go to Edit Profile → Applications → Authorized Applications

--- a/modules/administration-guide/partials/proc_setting-up-the-gitlab-authorized-application.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-gitlab-authorized-application.adoc
@@ -42,6 +42,8 @@ $ echo -n '__<gitlab_application_id>__' | base64
 $ echo -n '__<gitlab_client_secret>__' | base64
 ----
 
+. Verify that the Application is Authorized, Click your avatar and go to *Edit Profile* → *Applications* → *Authorized Applications*
+
 .Additional resources
 
 * link:https://docs.gitlab.com/ee/integration/oauth_provider.html#authorized-applications[GitLab Docs: Authorized applications]
