--- a/modules/administration-guide/pages/configuring-ingresses.adoc
+++ b/modules/administration-guide/pages/configuring-ingresses.adoc
@@ -2,7 +2,7 @@
 :description: Configuring labels and annotations on each {orch-ingress}
 :keywords: administration guide, configuring, ingress, ingresses
 :navtitle: Configuring {orch-ingress}
-:page-aliases: installation-guide:configuring-ingresses.adoc
+// :page-aliases: installation-guide:configuring-ingresses.adoc
 
 [id="adding-labels-and-annotations-to-ingresses"]
 = Adding labels and annotations to {orch-ingress}
