--- a/modules/administration-guide/partials/proc_setting-up-the-gitlab-authorized-application.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-gitlab-authorized-application.adoc
@@ -42,7 +42,7 @@ $ echo -n '__<gitlab_application_id>__' | base64
 $ echo -n '__<gitlab_client_secret>__' | base64
 ----
 
-. Verify that the Application is Authorized, Click your avatar and go to *Edit Profile* → *Applications* → *Authorized Applications*
+. Verify that the application is authorized by clicking on your avatar and selecting *Edit Profile* → *Applications* → *Authorized Applications*
 
 .Additional resources
 
