update of the configuring networking page

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -56,8 +56,8 @@
 *** xref:configuring-network-policies.adoc[]
 *** xref:configuring-che-hostname.adoc[]
 *** xref:importing-untrusted-tls-certificates.adoc[]
-*** xref:configuring-ingresses.adoc[]
-*** xref:configuring-routes.adoc[]
+*** xref:proc_che-configuring-ingresses.adoc[]
+*** xref:proc_configuring-routes.adoc[]
 ** xref:configuring-storage.adoc[]
 *** xref:installing-che-using-storage-classes.adoc[]
 ** xref:managing-identities-and-authorizations.adoc[]
