--- a/modules/administration-guide/partials/proc_configuring-routes.adoc
+++ b/modules/administration-guide/partials/proc_configuring-routes.adoc
@@ -2,7 +2,7 @@
 :description: Configuring OpenShift Route
 :keywords: administration guide, configuring, routes
 :navtitle: Configuring OpenShift Route
-:page-aliases: installation-guide:configuring-routes.adoc
+:page-aliases: installation-guide:configuring-routes.adoc, configuring-routes.adoc
 
 [id="configuring-routes"]
 = Configuring OpenShift Route to work with Router Sharding
