--- a/modules/administration-guide/pages/configuring-networking.adoc
+++ b/modules/administration-guide/pages/configuring-networking.adoc
@@ -10,5 +10,4 @@
 * xref:configuring-network-policies.adoc[]
 * xref:configuring-che-hostname.adoc[]
 * xref:importing-untrusted-tls-certificates.adoc[]
-* xref:configuring-ingresses.adoc[]
-* xref:configuring-routes.adoc[]
+* xref:adding-labels-and-annotations.adoc[]
