update of the configuring networking page

--- a/modules/administration-guide/pages/adding-labels-and-annotations.adoc
+++ b/modules/administration-guide/pages/adding-labels-and-annotations.adoc
@@ -1,4 +1,4 @@
-:_content-type: PROCESS
+:_content-type: ASSEMBLY
 :description: Adding labels and annotations
 :keywords: administration guide, lable, annotation
 :navtitle: Adding labels and annotations
