feat: Deploying Che with self-signed certificate
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/configuring-networking.adoc
+++ b/modules/administration-guide/pages/configuring-networking.adoc
@@ -9,5 +9,6 @@
 
 * xref:configuring-network-policies.adoc[]
 * xref:configuring-che-hostname.adoc[]
+* xref:deploying-che-with-self-signed-certificate.adoc[]
 * xref:importing-untrusted-tls-certificates.adoc[]
 * xref:adding-labels-and-annotations.adoc[]
