fix: Configuring storage classes
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/end-user-guide/partials/proc_requesting-persistent-storage-in-a-pvc.adoc
+++ b/modules/end-user-guide/partials/proc_requesting-persistent-storage-in-a-pvc.adoc
@@ -63,10 +63,10 @@ spec:
   resources:
     requests:
       storage: 3Gi <2>
-  volumeName: __<pv_name>__
-  storageClassName: manual
+  storageClassName: __<storage_class_name>__ <3>
   volumeMode: Filesystem
 ----
 <1> The mounted PV is available at `__</example/directory>__` in the workspace.
 <2> Example size value of the requested storage.
+<3> The name of the StorageClass required by the claim. Remove this line if you want to use a default StorageClass.
 ====
