update of the configuring networking page

--- a/modules/administration-guide/pages/adding-labels-and-annotations.adoc
+++ b/modules/administration-guide/pages/adding-labels-and-annotations.adoc
@@ -1,10 +1,12 @@
 :_content-type: ASSEMBLY
-:description: Adding labels and annotations
-:keywords: administration guide, lable, annotation
-:navtitle: Adding labels and annotations
+:description: Labels and annotations
+:keywords: administration-guide, labels, annotations
+:navtitle: Labels and annotations
+:page-aliases:
 
-[id="adding-labels-and-annotations"]
-= Adding labels and annotations
+[id="labels-and-annotations"]
+= Labels and annotations
 
-include::example$proc_{project-context}-configuring-ingresses.adoc[]
-xref:proc_configuring-routes.adoc
+include::example$proc_{project-context}-configuring-ingresses.adoc[leveloffset=+1]
+include::partial$proc_configuring-routes.adoc[leveloffset=+1]
+
