--- a/modules/administration-guide/pages/adding-labels-and-annotations.adoc
+++ b/modules/administration-guide/pages/adding-labels-and-annotations.adoc
@@ -1,5 +1,5 @@
 :_content-type: ASSEMBLY
-:description: Labels and annotations
+:description: Adding labels and annotations
 :keywords: administration-guide, labels, annotations
 :navtitle: Labels and annotations
 :page-aliases:
