--- a/modules/administration-guide/pages/adding-labels-and-annotations.adoc
+++ b/modules/administration-guide/pages/adding-labels-and-annotations.adoc
@@ -1,7 +1,7 @@
 :_content-type: ASSEMBLY
 :description: Adding labels and annotations
 :keywords: administration-guide, labels, annotations
-:navtitle: Labels and annotations
+:navtitle: Adding labels and annotations
 :page-aliases:
 
 [id="labels-and-annotations"]
