--- a/modules/administration-guide/pages/adding-labels-and-annotations.adoc
+++ b/modules/administration-guide/pages/adding-labels-and-annotations.adoc
@@ -5,7 +5,7 @@
 :page-aliases:
 
 [id="labels-and-annotations"]
-= Labels and annotations
+= Adding labels and annotations
 
 include::example$proc_{project-context}-configuring-ingresses.adoc[leveloffset=+1]
 include::partial$proc_configuring-routes.adoc[leveloffset=+1]
