--- a/modules/administration-guide/pages/adding-labels-and-annotations.adoc
+++ b/modules/administration-guide/pages/adding-labels-and-annotations.adoc
@@ -4,7 +4,7 @@
 :navtitle: Adding labels and annotations
 :page-aliases:
 
-[id="labels-and-annotations"]
+[id="adding-labels-and-annotations"]
 = Adding labels and annotations
 
 include::example$proc_{project-context}-configuring-ingresses.adoc[leveloffset=+1]
