--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -46,4 +46,8 @@ $ echo -n '__<microsoft_azure_devops_services_oauth_app_id>__' | base64
 $ echo -n '__<microsoft_azure_devops_services_oauth_client_secret>__' | base64
 ----
 
-* link:https://learn.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/oauth?view=azure-devops[Authorize access to the application with OAuth 2.0]
+. Make sure to authorize the application when Azure DevOps Services presents the authorization approval page to a user.
+
+.Additional resources
+
+* link:https://learn.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/oauth?view=azure-devops[Authorize access to REST APIs with OAuth 2.0]
