--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -24,6 +24,8 @@ If you have trouble xref:installing-che-on-openshift-using-cli.adoc[installing {
 . Install the {prod} Operator.
 +
 TIP: See link:https://docs.openshift.com/container-platform/{ocp4-ver}/operators/admin/olm-adding-operators-to-cluster.html#olm-installing-from-operatorhub-using-web-console_olm-adding-operators-to-a-cluster[Installing from OperatorHub using the web console].
++
+CAUTION: The {prod} Operator depends on the {devworkspace} Operator. If you install the {prod} Operator manually to a non-default namespace, ensure that the {devworkspace} Operator is also installed in the same namespace. This is required as the Operator Lifecycle Manager will attempt to install the {devworkspace} Operator as a dependency within the {prod} Operator namespace, potentially resulting in two conflicting installations of the {devworkspace} Operator if the latter is installed in a different namespace.
 
 . Create the `{prod-namespace}` project in OpenShift as follows:
 +
