chore: update of the "Configuring networking" page (#2627)
Co-authored-by: Max Leonov <mleonov@redhat.com>
Co-authored-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -56,8 +56,7 @@
 *** xref:configuring-network-policies.adoc[]
 *** xref:configuring-che-hostname.adoc[]
 *** xref:importing-untrusted-tls-certificates.adoc[]
-*** xref:configuring-ingresses.adoc[]
-*** xref:configuring-routes.adoc[]
+*** xref:adding-labels-and-annotations.adoc[]
 ** xref:configuring-storage.adoc[]
 *** xref:installing-che-using-storage-classes.adoc[]
 ** xref:managing-identities-and-authorizations.adoc[]
