--- a/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
+++ b/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
@@ -35,7 +35,7 @@ $ bash prepare-restricted-environment.sh \
   --devworkspace_operator_version "v{devworkspace-operator-version-patch}" \
   --prod_operator_index "{prod-operator-index}" \
   --prod_operator_package_name "{prod-operator-package-name}" \
-  --prod_operator_bundle_name "{prod-operator-bundle-name} \
+  --prod_operator_bundle_name "{prod-operator-bundle-name}" \
   --prod_operator_version "v{prod-ver-patch}" \
   --my_registry "__<my_registry>__" <1>
 ----
