fix: Installing Eclipse Che in disconnected cluster (#2621)
* fix: Installing Eclipse Che in disconnected cluster

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -25,7 +25,12 @@ include::partial$snip_preparing-images-for-a-restricted-environment.adoc[]
 +
 [subs="+attributes,+quotes"]
 ----
-$ {prod-cli} server:deploy --platform=openshift \
+$ {prod-cli} server:deploy \
+  --platform=openshift \
+  --olm-channel stable \
+  --catalog-source-name={prod-operator-package-name}-disconnected-install \
+  --catalog-source-namespace=openshift-marketplace \
+  --skip-devworkspace-operator \
   --che-operator-cr-patch-yaml=che-operator-cr-patch.yaml
 ----
 
