--- a/modules/administration-guide/pages/deploying-che-with-self-signed-certificate.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-self-signed-certificate.adoc
@@ -13,7 +13,7 @@ This procedure describes how to deploy {prod-short} with custom self-signed cert
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
-* The certificate and the private key files are generated.
+* Generated certificate and private key files.
 
 * `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
