--- a/modules/administration-guide/pages/configuring-networking.adoc
+++ b/modules/administration-guide/pages/configuring-networking.adoc
@@ -9,6 +9,8 @@
 
 * xref:configuring-network-policies.adoc[]
 * xref:configuring-che-hostname.adoc[]
-* xref:deploying-che-with-self-signed-certificate.adoc[]
+ifeval::["{prod-id-short}" == "che"]
+* xref:configuring-che-with-self-signed-certificate.adoc[]
+endif::[]
 * xref:importing-untrusted-tls-certificates.adoc[]
 * xref:adding-labels-and-annotations.adoc[]
