--- a/modules/administration-guide/pages/installing-che-on-minikube.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube.adoc
@@ -49,3 +49,8 @@ $ {prod-cli} server:status
 ----
 $ {prod-cli} dashboard:open
 ----
+ifeval::["{prod-id-short}" == "che"]
+.Additional resources
+
+* xref:configuring-che-with-self-signed-certificate.adoc[]
+endif::[]
