--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -55,7 +55,9 @@
 ** xref:configuring-networking.adoc[]
 *** xref:configuring-network-policies.adoc[]
 *** xref:configuring-che-hostname.adoc[]
-*** xref:deploying-che-with-self-signed-certificate.adoc[]
+ifeval::["{prod-id-short}" == "che"]
+*** xref:configuring-che-with-self-signed-certificate.adoc[]
+endif::[]
 *** xref:importing-untrusted-tls-certificates.adoc[]
 *** xref:adding-labels-and-annotations.adoc[]
 ** xref:configuring-storage.adoc[]
