--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -341,3 +341,9 @@ $ {prod-cli} dashboard:open
 ----
 
 . Log in to the {prod-short} instance with *Username:* `test` and *Password:* `test`.
+
+ifeval::["{prod-id-short}" == "che"]
+.Additional resources
+
+* xref:configuring-che-with-self-signed-certificate.adoc[]
+endif::[]
