--- a/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
+++ b/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
@@ -23,7 +23,7 @@ To configure {prod-short} to use a configured infrastructure storage, install {p
 * {prod-short} does not create persistent volumes in the infrastructure.
 * {prod-short} uses persistent volume claims (PVC) to mount persistent volumes.
 +
-A user defines a storage class name in the {prod-short} configuration to use the storage classes feature in the {prod-short} PVC.
+Define a storage class name in the {prod-short} configuration to use the storage classes feature in the {prod-short} PVC.
 
 .Procedure
 
