--- a/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
+++ b/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
@@ -7,7 +7,7 @@
 [id="installing-{prod-id-short}-using-storage-classes"]
 = Configuring storage classes
 
-To configure {prod-short} to use a configured infrastructure storage, install {prod-short} using storage classes. This is especially useful when a user wants to bind a persistent volume provided by a non-default provisioner.
+To configure {prod-short} to use a configured infrastructure storage, install {prod-short} using storage classes. This is especially useful when you want to bind a persistent volume provided by a non-default provisioner.
 
 {prod-short} has one component that requires persistent volumes to store data:
 
