--- a/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
+++ b/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
@@ -7,16 +7,7 @@
 [id="installing-{prod-id-short}-using-storage-classes"]
 = Configuring storage classes
 
-To configure {prod-short} to use a configured infrastructure storage, install {prod-short} using storage classes. This is especially useful when a user wants to bind a persistent volume provided by a non-default provisioner. To do so, a user binds this storage for the {prod-short} data saving and sets the parameters for that storage. These parameters can determine the following:
-
-* A special host path
-* A storage capacity
-* A volume mod
-* Mount options
-* A file system
-* An access mode
-* A storage type
-* And many others
+To configure {prod-short} to use a configured infrastructure storage, install {prod-short} using storage classes. This is especially useful when you want to bind a persistent volume provided by a non-default provisioner.
 
 {prod-short} has one component that requires persistent volumes to store data:
 
@@ -31,9 +22,8 @@ To configure {prod-short} to use a configured infrastructure storage, install {p
 
 * {prod-short} does not create persistent volumes in the infrastructure.
 * {prod-short} uses persistent volume claims (PVC) to mount persistent volumes.
-* The {prod-short} server creates  persistent volume claims.
 +
-A user defines a storage class name in the {prod-short} configuration to use the storage classes feature in the {prod-short} PVC. With storage classes, a user configures infrastructure storage in a flexible way with additional storage parameters. It is also possible to bind a static provisioned persistent volumes to the {prod-short} PVC using the class name.
+Define a storage class name in the {prod-short} configuration to use the storage classes feature in the {prod-short} PVC.
 
 .Procedure
 
@@ -46,43 +36,17 @@ Use CheCluster Custom Resource definition to define storage classes:
 spec:
   devEnvironments:
     storage:
-      pvc:
-        # keep blank unless you need to use a non default storage class for workspace PVC(s)
-        storageClass: 'workspace-storage'
+      perUserStrategyPvcConfig:
+        claimSize: __<claim_size>__ <1>
+        storageClass: __<storage_class_name>__ <2>
+      perWorkspaceStrategyPvcConfig:
+        claimSize: __<claim_size>__ <1>
+        storageClass: __<storage_class_name>__ <2>
+      pvcStrategy: __<pvc_strategy>__ <3>
 ----
-
-. Define the persistent volume for a {prod-short} workspace in a `che-workspace-pv.yaml` file:
-+
-.`che-workspace-pv.yaml` file
-[source,yaml]
-----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: workspace-pv-volume
-  labels:
-    type: local
-spec:
-  storageClassName: workspace-storage
-  capacity:
-    storage: 10Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: "/data/che/workspace"
-----
-
-. Bind the persistent volume:
-+
-[subs="+quotes,+attributes"]
-----
-$ kubectl apply -f che-workspace-pv.yaml
-----
-
-[NOTE]
-====
-You must provide valid file permissions for volumes. You can do it using storage class configuration or manually. To manually define permissions, define `storageClass#mountOptions` `uid` and `gid`.
-====
+<1> Persistent Volume Claim size.
+<2> Storage class for the Persistent Volume Claim. When omitted or left blank, a default storage class is used.
+<3> Persistent volume claim strategy. The supported strategies are: per-user (all workspaces Persistent Volume Claims in one volume), per-workspace (each workspace is given its own individual Persistent Volume Claim) and ephemeral (non-persistent storage where local changes will be lost when the workspace is stopped.)
 
 .Additional resources
 
