--- a/modules/administration-guide/pages/configuring-che-with-self-signed-certificate.adoc
+++ b/modules/administration-guide/pages/configuring-che-with-self-signed-certificate.adoc
@@ -7,7 +7,7 @@
 [id="configuring-{prod-id-short}-with-self-signed-certificate"]
 = Configuring {prod} with self-signed certificate
 
-This procedure describes how to configure {prod-short} with custom self-signed certificate.
+This procedure describes how to configure a self-signed certificate to deploy {prod-short}.
 
 .Prerequisites
 
@@ -15,7 +15,7 @@ This procedure describes how to configure {prod-short} with custom self-signed c
 
 * Generated certificate and private key files.
 
-* The `{prod-cli}`tool. See: xref:installing-the-chectl-management-tool.adoc[].
+* The `{prod-cli}`tool. See xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
