--- a/modules/administration-guide/pages/deploying-che-with-self-signed-certificate.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-self-signed-certificate.adoc
@@ -15,7 +15,7 @@ This procedure describes how to deploy {prod-short} with custom self-signed cert
 
 * Generated certificate and private key files.
 
-* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
+* The `{prod-cli}`tool. See: xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
