--- a/modules/administration-guide/pages/configuring-che-with-self-signed-certificate.adoc
+++ b/modules/administration-guide/pages/configuring-che-with-self-signed-certificate.adoc
@@ -1,21 +1,21 @@
 :_content-type: PROCEDURE
 :description: Configuring {prod-short} with self-signed certificates
-:keywords: administration guide, configuring, {prod}, {prod-short}, certificate
+:keywords: administration guide, configuring, {prod}, {prod-short}, self-signed, certificate
 :navtitle: Configuring {prod-short} with self-signed certificates
 :page-aliases: installation-guide:configuring-che-with-self-signed-certificate.adoc
 
 [id="configuring-{prod-id-short}-with-self-signed-certificate"]
 = Configuring {prod} with self-signed certificate
 
-This procedure describes how to configure a self-signed certificate to deploy {prod-short}.
+By default `{prod-cli}` creates job to generate self-signed certificate to deploy {prod-short}.
+This procedure describes how to configure a custom self-signed certificate on the {kubernetes} cluster
+before deploying {prod-short}.
 
 .Prerequisites
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
 * Generated certificate and private key files.
-
-* The `{prod-cli}`tool. See xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
