fix: OAuth2 secret configuration for Azure DevOps
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
@@ -54,3 +54,5 @@ EOF
 ----
 
 . Verify in the output that the Secret is created.
+
+. Wait for the rollout of the {prod-short} server components to be completed.
