--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -43,7 +43,7 @@ $ echo -n '__<microsoft_azure_devops_services_oauth_app_id>__' | base64
 +
 [subs="+quotes,+attributes,+macros"]
 ----
-$ echo -n '__<microsoft_azure_devops_services_oauth_client_secret>__' | base64
+$ echo -n '__<microsoft_azure_devops_services_oauth_client_secret>__' | base64 -w 0
 ----
 
 .Additional resources
