--- a/modules/administration-guide/pages/configuring-networking.adoc
+++ b/modules/administration-guide/pages/configuring-networking.adoc
@@ -9,6 +9,6 @@
 
 * xref:configuring-network-policies.adoc[]
 * xref:configuring-che-hostname.adoc[]
-* xref:configuring-che-with-self-signed-certificate.adoc[]
+include::example$snip_{project-context}-xref-configuring-che-with-self-signed-certificate.adoc[]
 * xref:importing-untrusted-tls-certificates.adoc[]
 * xref:adding-labels-and-annotations.adoc[]
