--- a/modules/administration-guide/pages/configuring-che-with-self-signed-certificate.adoc
+++ b/modules/administration-guide/pages/configuring-che-with-self-signed-certificate.adoc
@@ -7,9 +7,8 @@
 [id="configuring-{prod-id-short}-with-self-signed-certificate"]
 = Configuring {prod} with self-signed certificate
 
-By default `{prod-cli}` creates job to generate self-signed certificate to deploy {prod-short}.
-This procedure describes how to configure a custom self-signed certificate on the {kubernetes} cluster
-before deploying {prod-short}.
+By default `{prod-cli}` creates a {kubernetes} Job to generate self-signed certificate to deploy {prod-short} with.
+This procedure describes how to configure a custom self-signed certificate on prior of deploying {prod-short}.
 
 .Prerequisites
 
