fix: Remove https://mattermost.eclipse.org/eclipse/channels/eclipse-che to unblock PR checks
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/RELEASE.adoc
+++ b/RELEASE.adoc
@@ -13,7 +13,7 @@ The publication is decoupled. See link:https://github.com/eclipse-che/che-docs/t
 
 .Prerequisites
 
-* The new release is published on https://github.com/eclipse/che/releases and https://mattermost.eclipse.org/eclipse/channels/eclipse-che-releases.
+* The new release is published on https://github.com/eclipse/che/releases.
 
 .Procedure
 
