feat: Deploying Che with self-signed certificate (#2625)
* feat: Deploying Che with self-signed certificate

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* Update modules/administration-guide/pages/deploying-che-with-self-signed-certificate.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/deploying-che-with-self-signed-certificate.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* fixes

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* fix

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* fix

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* Update modules/administration-guide/pages/installing-che-on-minikube.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-networking.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-networking.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Address remarks

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* fix

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* fix

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

---------

Signed-off-by: Anatolii Bazko <abazko@redhat.com>
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>
Co-authored-by: Max Leonov <mleonov@redhat.com>

--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -341,3 +341,7 @@ $ {prod-cli} dashboard:open
 ----
 
 . Log in to the {prod-short} instance with *Username:* `test` and *Password:* `test`.
+
+.Additional resources
+
+* xref:configuring-che-with-self-signed-certificate.adoc[]
