--- a/modules/administration-guide/pages/installing-che-on-minikube.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube.adoc
@@ -49,3 +49,6 @@ $ {prod-cli} server:status
 ----
 $ {prod-cli} dashboard:open
 ----
+.Additional resources
+
+* xref:configuring-che-with-self-signed-certificate.adoc[]
