--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -55,6 +55,7 @@
 ** xref:configuring-networking.adoc[]
 *** xref:configuring-network-policies.adoc[]
 *** xref:configuring-che-hostname.adoc[]
+*** xref:configuring-che-with-self-signed-certificate.adoc[]
 *** xref:importing-untrusted-tls-certificates.adoc[]
 *** xref:adding-labels-and-annotations.adoc[]
 ** xref:configuring-storage.adoc[]
