Revert "fix: Remove https://mattermost.eclipse.org/eclipse/channels/eclipse-che to unblock PR checks (#2630)"
This reverts commit 220fc0669e72d1e4179096f9623153bccc58025a.

--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -330,3 +330,6 @@ $ ./tools/runnerpreview.sh
 * https://github.com/eclipse/che/issues/new?labels=area/doc,kind/question[image:https://img.shields.io/badge/New-question-blue.svg?style=flat-curved[Ask a question]]
 
 * https://github.com/eclipse/che/issues/new?labels=area/doc,kind/bug[image:https://img.shields.io/badge/New-bug-red.svg?style=flat-curved[Open a bug]]
+
+.Public Chat
+* Join the public https://mattermost.eclipse.org/eclipse/channels/eclipse-che[eclipse-che Mattermost channel] to talk to the community and contributors.
