--- a/modules/overview/pages/introduction-to-eclipse-che.adoc
+++ b/modules/overview/pages/introduction-to-eclipse-che.adoc
@@ -32,6 +32,10 @@
 
 Interested in joining the community? Join us on the following channels:
 
+Public chat::
+
+Join the public link:https://mattermost.eclipse.org/eclipse/channels/eclipse-che[{prod} Mattermost] channel to chat with the developers.
+
 GitHub project repositories::
 
 Report bugs, request features, and contribute in the main link:https://github.com/eclipse/che[{prod} repository].
