--- a/modules/administration-guide/partials/proc_setting-up-the-github-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-github-oauth-app.adoc
@@ -21,7 +21,7 @@ Set up a GitHub OAuth App using OAuth 2.0.
 
 . Enter the following values:
 
-.. *Application name*: `<application name>`
+.. *Application name*: `<__application name__>`
 .. *Homepage URL*: `pass:c,a,q[{prod-url}]/`
 .. *Authorization callback URL*: `pass:c,a,q[{prod-url}]/api/oauth/callback`
 
