--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -12,7 +12,13 @@ Set up a Microsoft Azure DevOps Services OAuth App using OAuth 2.0.
 .Prerequisites
 
 * You are logged in to link:https://azure.microsoft.com/en-us/products/devops/[Microsoft Azure DevOps Services].
-* Third-party applications can access resources in your organization through OAuth. See link:https://learn.microsoft.com/en-us/azure/devops/organizations/accounts/change-application-access-policies?view=azure-devops[Manage security & app access policies].
++
+[IMPORTANT]
+====
+'Third-party application access via OAuth' is enabled for your organization. See link:https://learn.microsoft.com/en-us/azure/devops/organizations/accounts/change-application-access-policies?view=azure-devops[Change application connection & security policies for your organization].
+====
++
+
 * link:https://www.gnu.org/software/coreutils/base64[`base64`] is installed in the operating system you are using.
 
 .Procedure
