fixup! formating adding additional links

--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -15,7 +15,7 @@ Set up a Microsoft Azure DevOps Services OAuth App using OAuth 2.0.
 +
 [IMPORTANT]
 ====
-'Third-party application access via OAuth' is enabled for your organization. See link:https://learn.microsoft.com/en-us/azure/devops/organizations/accounts/change-application-access-policies?view=azure-devops[Change application connection & security policies for your organization].
+`Third-party application access via OAuth` is enabled for your organization. See link:https://learn.microsoft.com/en-us/azure/devops/organizations/accounts/change-application-access-policies?view=azure-devops[Change application connection & security policies for your organization].
 ====
 +
 
@@ -55,3 +55,4 @@ $ echo -n '__<microsoft_azure_devops_services_oauth_client_secret>__' | base64 -
 .Additional resources
 
 * link:https://learn.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/oauth?view=azure-devops[Authorize access to REST APIs with OAuth 2.0]
+* link:https://learn.microsoft.com/en-us/azure/devops/organizations/accounts/change-application-access-policies?view=azure-devops[Change application connection & security policies for your organization]
