vale warning fix

--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -4,6 +4,8 @@
 :navtitle: Setting up the Microsoft Azure DevOps Services OAuth App
 // :page-aliases:
 
+pass:[<!-- vale RedHat.TermsWarnings = NO -->]
+
 [id="setting-up-the-microsoft-azure-devops-services-oauth-app"]
 = Setting up the Microsoft Azure DevOps Services OAuth App
 
@@ -51,6 +53,8 @@ $ echo -n '__<microsoft_azure_devops_services_oauth_app_id>__' | base64
 ----
 $ echo -n '__<microsoft_azure_devops_services_oauth_client_secret>__' | base64 -w 0
 ----
+
+pass:[<!-- vale RedHat.TermsWarnings = YES -->]
 
 .Additional resources
 
