--- a/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
+++ b/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
@@ -7,7 +7,7 @@
 [id="viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code"]
 = Viewing language server and debug adapter logs in Visual Studio Code - Open Source
 
-In the Visual Studio Code - Open Source editor running in your workspace,
+In the Microsoft Visual Studio Code - Open Source editor running in your workspace,
 you can configure the installed language server and debug adapter extensions to view their logs.
 
 .Procedure
