chore: Ensure that  contains URL but not just hostname
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
@@ -23,10 +23,10 @@ You can configure {prod-short} to support operations on Git providers that use s
 ----
 $ {orch-cli} create configmap che-git-self-signed-cert \
   --from-file=ca.crt=__<path_to_certificate>__ \  <1>
-  --from-literal=githost=__<host:port>__ -n {prod-namespace}  <2>
+  --from-literal=githost=__<git_server_url>__ -n {prod-namespace}  <2>
 ----
 <1> Path to the self-signed certificate.
-<2> Optional parameter to specify the `https://` host and port of the HTTPS connection on the Git server. When omitted, the self-signed certificate is used for all repositories over HTTPS.
+<2> Optional parameter to specify the Git server URL. When omitted, the self-signed certificate is used for all repositories over HTTPS. For instance `https://git.example.com:8443`.
 +
 [NOTE]
 ====
