Update remaining references to "Visual Studio Code" with addition of "- Open Source" (#2614)
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
+++ b/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
@@ -7,7 +7,7 @@
 [id="configuring-the-open-vsx-registry-url"]
 = Configuring the Open VSX registry URL
 
-To search and install extensions, the Visual Studio Code editor uses an embedded Open VSX registry instance.
+To search and install extensions, the Microsoft Visual Studio Code - Open Source editor uses an embedded Open VSX registry instance.
 You can also configure {prod-short} to use another Open VSX registry instance rather than the embedded one.
 
 .Procedure
