--- a/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
@@ -33,7 +33,7 @@ metadata:
     controller.devfile.io/watch-secret: 'true'
 data:
   tls.cer: >-
-    <Base64_encoded_content_of_public_cert>
+    __<Base64_encoded_content_of_public_cert>__ <1>
 ----
 <1> Base64 encoding with disabled line wrapping.
 
