--- a/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
@@ -52,5 +52,5 @@ metadata:
     controller.devfile.io/watch-configmap: 'true'
 data:
   NPM_CONFIG_REGISTRY: >-
-    https://<npm_artifact_repository_route>/repository/npm-all/
+    __<npm_artifact_repository_route>__/repository/npm-all/
 ----
