npm process update

--- a/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
@@ -80,4 +80,4 @@ Use the command described below to restore the correct NODE_EXTRA_CA_CERTS varia
 ----
 `export NODE_EXTRA_CA_CERTS=/public-certs/nexus.cer` <1>
 ----
-<1> `/public-certs/nexus.cer` is the path to self-signed SSL certificate of Nexus artifactory.
+<1> `/public-certs/nexus.cer` is the path to self-signed SSL/TLS certificate of Nexus artifactory.
