npm process update

--- a/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
@@ -55,29 +55,5 @@ data:
     https://__<npm_artifact_repository_route>__/repository/npm-all/
 ----
 
-= Disabling self-signed certificate validation
-
-Follow the instructions below to disable self-signed certificate validation.
-
-.Procedure
-
-* Run the following command in the terminal:
-+
-[source, yaml]
-----
-npm config set strict-ssl false
-----
-
-= Restoring correct NODE_EXTRA_CA_CERTS variable value
-
-Use the command described below to restore the correct NODE_EXTRA_CA_CERTS variable value before dependencies are downloaded every time.
-
-.Procedure
-
-* Run the following command in the terminal:
-+
-[source, yaml]
-----
-`export NODE_EXTRA_CA_CERTS=/public-certs/nexus.cer` <1>
-----
-<1> `/public-certs/nexus.cer` is the path to self-signed SSL/TLS certificate of Nexus artifactory.
+include::disable-self-signed-certificate-validation.adoc[]
+include::restoring-node-extra-ca-certs-variable-value.adoc[]
