npm process update

--- a/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-npm-artifact-repositories.adoc
@@ -55,5 +55,5 @@ data:
     https://__<npm_artifact_repository_route>__/repository/npm-all/
 ----
 
-include::disable-self-signed-certificate-validation.adoc[]
-include::restoring-node-extra-ca-certs-variable-value.adoc[]
+include::partial$proc_disabling-self-signed-certificate-validation.adoc[]
+include::partial$proc_restoring-node-extra-ca-certs-variable-value.adoc[]
