--- a/modules/end-user-guide/pages/using-che-in-team-workflow.adoc
+++ b/modules/end-user-guide/pages/using-che-in-team-workflow.adoc
@@ -2,12 +2,12 @@
 :description: Adopting {prod-short}
 :keywords: adopt, adopting, adoption
 :navtitle: Adopting {prod-short}
-:page-aliases:
+:page-aliases:adopting-che
 
-[id="adopting-che"]
-= Adopting {prod-short}
+[id="using-che-in-team-workflow"]
+= Using {prod-short} in team workflow
 
-To get started with adopting {prod-short} for your organization, you can read the following:
+Learn about the benefits of using {prod-short} in your organization in the following articles:
 
 * xref:developer-workspaces.adoc[]
 * xref:first-time-contributors.adoc[]
