--- a/modules/hosted-che/partials/assembly_hosted-che.adoc
+++ b/modules/hosted-che/partials/assembly_hosted-che.adoc
@@ -21,5 +21,5 @@ include::partial$ref_hosted-che-faq-and-troubleshooting.adoc[leveloffset=+1]
 
 .Additional resources
 
-* For general end-user guidance, see xref:end-user-guide:user-onboarding.adoc[].
+* For general end-user guidance, see xref:end-user-guide:getting-started-with-che.adoc[].
 
