--- a/modules/end-user-guide/pages/getting-started-with-che.adoc
+++ b/modules/end-user-guide/pages/getting-started-with-che.adoc
@@ -2,10 +2,10 @@
 :description: User onboarding
 :keywords: getting-started, user-onboarding, new-user, new-users
 :navtitle: User onboarding
-:page-aliases:
+:page-aliases:user-onboarding
 
-[id="user-onboarding"]
-= User onboarding
+[id="getting-started-with-che"]
+= Getting started with {prod-short}
 
 If your organization is already running a {prod-short} instance, you can get started as a new user by learning how to start a new workspace, manage your workspaces, and authenticate yourself to a Git server from a workspace:
 
