--- a/modules/end-user-guide/pages/using-che-in-team-workflow.adoc
+++ b/modules/end-user-guide/pages/using-che-in-team-workflow.adoc
@@ -1,7 +1,7 @@
 :_content-type: CONCEPT
-:description: Adopting {prod-short}
+:description: Using {prod-short} in team workflow
 :keywords: adopt, adopting, adoption
-:navtitle: Adopting {prod-short}
+:navtitle: Using {prod-short} in team workflow
 :page-aliases:adopting-che
 
 [id="using-che-in-team-workflow"]
