--- a/modules/end-user-guide/pages/getting-started-with-che.adoc
+++ b/modules/end-user-guide/pages/getting-started-with-che.adoc
@@ -1,7 +1,7 @@
 :_content-type: CONCEPT
-:description: User onboarding
+:description: Getting started with {prod-short}
 :keywords: getting-started, user-onboarding, new-user, new-users
-:navtitle: User onboarding
+:navtitle: Getting started with {prod-short}
 :page-aliases:user-onboarding
 
 [id="getting-started-with-che"]
