--- a/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
@@ -13,8 +13,9 @@ User authentication to a Git server from a workspace is configured by the admini
 
 * Your administrator sets up an xref:administration-guide:configuring-oauth-for-git-providers.adoc[OAuth application on GitHub, GitLab, Bitbucket, or Microsoft Azure Repos] for your organization's {prod} instance.
 
-* As a workaround, some users create and apply their own {kubernetes} Secrets for their personal xref:using-a-git-provider-access-token.adoc[Git-provider access tokens].
+* As a workaround, some users create and apply their own {kubernetes} Secrets for their personal xref:using-a-git-provider-access-token.adoc[Git-provider access tokens] or link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additional-configuration.adoc#configuring-devworkspaces-to-use-ssh-keys-for-git-operations[configure SSH keys for Git operations].
 
 .Additional resources
 * xref:administration-guide:configuring-oauth-for-git-providers.adoc[Administration Guide: Configuring OAuth for Git providers]
 * xref:using-a-git-provider-access-token.adoc[User Guide: Using a Git-provider access token]
+* link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additional-configuration.adoc#configuring-devworkspaces-to-use-ssh-keys-for-git-operations[Configuring DevWorkspaces to use SSH keys for Git operations]
