--- a/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
@@ -24,6 +24,7 @@ You can create permanent mount points for various components:
 * Maven configuration, such as the link:https://maven.apache.org/settings.html[user-specific] `settings.xml` file 
 * SSH key pairs
 * xref:using-a-git-provider-access-token.adoc[Git-provider access tokens]
+* xref:mounting-git-configuration.adoc[Git configuration]
 * AWS authorization tokens
 * Configuration files
 * Persistent storage
