--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -10,7 +10,7 @@
 With {prod-short}, you can visit a URL in your browser to start
 a new workspace that contains a clone of a Git repository.
 This way, you can clone a Git repository that is hosted on GitHub,
-a GitLab, a Bitbucket or Azure DevOps server instances.
+a GitLab, a Bitbucket or Microsoft Azure DevOps server instances.
 
 TIP: You can also use the *Git Repo URL* field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a Git repository to start a new workspace.
 
@@ -59,7 +59,7 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__?__<optional_parameters>__ <1>
 +
 [TIP]
 ====
-It is possible to use GIT+SSH URLs to start a new workspace.
+It is possible to use Git+SSH URLs to start a new workspace.
 See link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additional-configuration.adoc#configuring-devworkspaces-to-use-ssh-keys-for-git-operations[Configuring DevWorkspaces to use SSH keys for Git operations]
 ====
 +
@@ -76,7 +76,7 @@ See link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additio
 * `pass:c,a,q[{prod-url}#https://__<github_host>__/__<user_or_org>__/__<repository>__]` starts a new workspace with a clone of the default branch.
 * `pass:c,a,q[{prod-url}#https://__<github_host>__/__<user_or_org>__/__<repository>__/tree/__<branch_name>__]` starts a new workspace with a clone of the specified branch.
 * `pass:c,a,q[{prod-url}#https://__<github_host>__/__<user_or_org>__/__<repository>__/pull/__<pull_request_id>__]` starts a new workspace with a clone of the branch of the pull request.
-* `pass:c,a,q[{prod-url}#git@__<github_host>__:__<user_or_org>__/__<repository>__.git]` starts a new workspace from GIT+SSH URL.
+* `pass:c,a,q[{prod-url}#git@__<github_host>__:__<user_or_org>__/__<repository>__.git]` starts a new workspace from Git+SSH URL.
 ====
 
 +
@@ -85,7 +85,7 @@ See link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additio
 
 * `pass:c,a,q[{prod-url}#https://__<gitlab_host>__/__<user_or_org>__/__<repository>__]` starts a new workspace with a clone of the default branch.
 * `pass:c,a,q[{prod-url}#https://__<gitlab_host>__/__<user_or_org>__/__<repository>__/-/tree/__<branch_name>__]` starts a new workspace with a clone of the specified branch.
-* `pass:c,a,q[{prod-url}#git@__<gitlab_host>__:__<user_or_org>__/__<repository>__.git]` starts a new workspace from GIT+SSH URL.
+* `pass:c,a,q[{prod-url}#git@__<gitlab_host>__:__<user_or_org>__/__<repository>__.git]` starts a new workspace from Git+SSH URL.
 ====
 
 +
@@ -95,15 +95,15 @@ See link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additio
 * `pass:c,a,q[{prod-url}#https://__<bb_host>__/scm/__<project-key>__/__<repository>__.git]` starts a new workspace with a clone of the default branch.
 * `pass:c,a,q[{prod-url}#https://__<bb_host>__/users/__<user_slug>__/repos/__<repository>__/]` starts a new workspace with a clone of the default branch, if a repository was created under the user profile.
 * `pass:c,a,q[{prod-url}#https://__<bb_host>__/users/__<user-slug>__/repos/__<repository>__/browse?at=refs%2Fheads%2F__<branch-name>__]` starts a new workspace with a clone of the specified branch.
-* `pass:c,a,q[{prod-url}#git@__<bb_host>__:__<user_slug>__/__<repository>__.git]` starts a new workspace from GIT+SSH URL.
+* `pass:c,a,q[{prod-url}#git@__<bb_host>__:__<user_slug>__/__<repository>__.git]` starts a new workspace from Git+SSH URL.
 
 ====
 +
-.The URL syntax for starting a new workspace with a clone of an Azure DevOps Git repository
+.The URL syntax for starting a new workspace with a clone of a Microsoft Azure DevOps Git repository
 ====
 * `pass:c,a,q[{prod-url}#https://__<organization>__@dev.azure.com/__<organization>__/__<project>__/_git/__<repository>__]` starts a new workspace with a clone of the default branch.
 * `pass:c,a,q[{prod-url}#https://__<organization>__@dev.azure.com/__<organization>__/__<project>__/_git/__<repository>__?version=GB__<branch>__]` starts a new workspace with a clone of the specific branch.
-* `pass:c,a,q[{prod-url}#git@ssh.dev.azure.com:v3/__<organization>__/__<project>__/__<repository>__]` starts a new workspace from GIT+SSH URL.
+* `pass:c,a,q[{prod-url}#git@ssh.dev.azure.com:v3/__<organization>__/__<project>__/__<repository>__]` starts a new workspace from Git+SSH URL.
 ====
 
 +
