--- a/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-from-a-devfile-url.adoc
@@ -71,8 +71,8 @@ This works for GitHub, GitLab, Bitbucket, Microsoft Azure, and other providers t
 +
 [IMPORTANT]
 ====
-The automated git credential injection is not supported.
-To configure the git credentials, use xref:using-a-git-provider-access-token.adoc[configure personal access token] guide.
+The automated Git credential injection is not supported.
+To configure the Git credentials, use xref:using-a-git-provider-access-token.adoc[configure personal access token] guide.
 ====
 +
 .Verification
